# Diploma

./: .gitignore  NeuralNetwork.py  README.md  mainDT.py  mainKNC.py  mainLR.py
DiplomaFeaturesGenAndClassify_CMake/: CMakeLists.txt  ClassificationAlgorithm.cpp  ClassificationAlgorithm.h  FeaturesGen.kdev4  KNNClassifier.cpp  KNNClassifier.h  Makefile  main.cpp  mainClassificator.cpp  mainGenerator.cpp
DiplomaFeaturesGenLinux_Realization2/: DiplomaFeaturesGenLinux_Realization2.pro  main.cpp
DiplomaFeaturesGenerator/: DiplomaFeaturesGenerator.sln
DiplomaFeaturesGenerator/DiplomaFeaturesGenerator/: DiplomaFeaturesGenerator.vcxproj  main.cpp
